// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should match snapshot with 1 expense 1`] = `
<div>
  <p>
    viewing 
    1
     
    expense
     totalling 
    $1.95
  </p>
</div>
`;

exports[`should match snapshot with all 3 expenses 1`] = `
<div>
  <p>
    viewing 
    3
     
    expenses
     totalling 
    $1,141.95
  </p>
</div>
`;
